src/test/ui/regions/do-not-suggest-adding-bound-to-opaque-type.stderr
error[E0597]: `arena` does not live long enough
  --> $DIR/do-not-suggest-adding-bound-to-opaque-type.rs:22:31
   |
LL |     let mut vec = Vec::new_in(&arena);
   |                               ^^^^^^ borrowed value does not live long enough
...
LL |     vec.into_iter()
   |     --------------- opaque type requires that `arena` is borrowed for `'static`
LL | }
   | - `arena` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
